--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="nav">
-<a href="https://dm66521.domenomania.eu" target="_blank"><p class="text">SCHOOL PROJECTS</p></a>
+<a href="https://r285.xyz" target="_blank"><p class="text">𝕊CHOOL PROJECTS</p></a>
 <a href="python.html">PLIKI PYTHON</a>
 <a href="innestrony.html">INNE STRONY</a>
 <a href="zdjecia.html">ZDJĘCIA</a>
@@ -21,6 +21,19 @@
 <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
 <h3> &#169; rotkiW285</h3>
 </div>
+
+ <div class="gallery">
+    <a target="_blank" href="sp/230907/index.html">
+    <img src="img/230907.webp" loading="lazy"></a>
+    <p>07.09.23 - Strona responsywna</p>
+    <p><a href="zip/230907.zip" download>Pobierz</a></p></div>   
+
+ <!-- <div class="gallery">
+    <a target="_blank" href="sp/230905/index.html">
+    <img src="img/test.webp" loading="lazy"></a>
+    <p>05.09.23 - Pierwsze kroki w JS</p>
+    <p><a href="zip/230905.zip" download>Pobierz</a></p></div>     -->
+    <!-- SKOPIOWAC Z PENDRIVE I POMIENIC WSZYSTKO -->
 
  <div class="gallery">
     <a target="_blank" href="sp/230522/index.html">
