--- a/innestrony.html
+++ b/innestrony.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="nav">
-<a href="index.html"><p class="text">SCHOOL PROJECTS</p></a>
+<a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
 <a href="python.html">PLIKI PYTHON</a>
 <a href="innestrony.html">INNE STRONY</a>
 <a href="zdjecia.html">ZDJĘCIA</a>
