starszaki, is09 del, inf02-23

--- a/inne.html
+++ b/inne.html
@@ -14,6 +14,7 @@
 <body>
     <div class="nav">
 <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
+<a href="starszaki.html">STARSZAKI</a>
 <a href="python.html">PLIKI PYTHON</a>
 <a href="innestrony.html">INNE STRONY</a>
 <a href="zdjecia.html">ZDJĘCIA</a>
@@ -35,7 +36,13 @@
     <div class="gallery">
     <a target="_blank" href="inne/ostatnie slowa.txt">
     <img src="img/ostatnie-slowa.webp" loading="lazy"></a>
-    <p>Ostatnie słowa</p><p></p></div>
+    <p>Ostatnie słowa</p>
+    <p>.</p></div>
+
+    <div class="gallery">
+    <img src="img/inf02-23.webp" loading="lazy">
+    <p>Arkusze INF.02 sesja czerwiec 2023</p>
+    <p><a href="zip/inf02-23.zip" download>Pobierz</a></p></div>
 
 
 
