--- a/innestrony.html
+++ b/innestrony.html
@@ -14,6 +14,7 @@
 <body>
     <div class="nav">
 <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
+<a href="starszaki.html">STARSZAKI</a>
 <a href="python.html">PLIKI PYTHON</a>
 <a href="innestrony.html">INNE STRONY</a>
 <a href="zdjecia.html">ZDJĘCIA</a>
@@ -53,12 +54,6 @@
     <img src="img/is08.webp" loading="lazy"></a>
     <p>IS08 - Polskagola</p>
     <p><a href="zip/is08.zip" download>Pobierz</a></p></div>
-
-    <div class="gallery">
-    <a target="_blank" href="innestrony/is09/index.html">
-    <img src="img/is09.webp" loading="lazy"></a>
-    <p>IS09 - Essa (strona rensposywna)</p>
-    <p><a href="zip/is09.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
     <a target="_blank" href="innestrony/is10/index.html">
