--- a/python.html
+++ b/python.html
@@ -14,6 +14,7 @@
 <body>
     <div class="nav">
 <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
+<a href="starszaki.html">STARSZAKI</a>
 <a href="python.html">PLIKI PYTHON</a>
 <a href="innestrony.html">INNE STRONY</a>
 <a href="zdjecia.html">ZDJĘCIA</a>
