--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <a href="zdjecia.html">ZDJĘCIA</a>
 <a href="inne.html">INNE PLIKI</a>
 <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
+<a href="text.txt" target="_blank">INFO</a>
 <h3> &#169; rotkiW285</h3>
 </div>
 
