--- a/index.html
+++ b/index.html
@@ -24,18 +24,27 @@
 <h3> &#169; rotkiW285</h3>
 </div>
 
+
+
+
+
+
+
+
+
+
+
  <div class="gallery">
     <a target="_blank" href="sp/230907/index.html">
     <img src="img/230907.webp" loading="lazy"></a>
     <p>07.09.23 - Strona responsywna</p>
     <p><a href="zip/230907.zip" download>Pobierz</a></p></div>   
 
- <!-- <div class="gallery">
+ <div class="gallery">
     <a target="_blank" href="sp/230905/index.html">
-    <img src="img/test.webp" loading="lazy"></a>
+    <img src="img/230905.webp" loading="lazy"></a>
     <p>05.09.23 - Pierwsze kroki w JS</p>
-    <p><a href="zip/230905.zip" download>Pobierz</a></p></div>     -->
-    <!-- SKOPIOWAC Z PENDRIVE I POMIENIC WSZYSTKO -->
+    <p><a href="zip/230905.zip" download>Pobierz</a></p></div>    
 
 </body>
 </html>
