--- a/sp/230905/index.html
+++ b/sp/230905/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>050923</title>
-    <script>
-        document.write("Ema eniu")
-    </script>
+    <title>05.09.2023</title>
+    <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
