--- a/php.html
+++ b/php.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZDJĘCIA - SCHOOL PROJECTS</title>
+    <title>PHP - SCHOOL PROJECTS</title>
     <link rel="stylesheet" href="style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -23,27 +23,7 @@
 <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
 <h3> &#169; rotkiW285</h3>
 </div>
-
-    <div class="gallery">
-    <a href="inne/fortnite.png" download>
-    <img src="inne/fortnite.png" loading="lazy"></a></div>
-
-    <div class="gallery">
-    <a href="inne/kaletanczyk.jpg" download>
-    <img src="inne/kaletanczyk.jpg" loading="lazy"></a></div>
-
-    <div class="gallery">
-    <a href="inne/z-pngkey-cat.png" download>
-    <img src="inne/z-pngkey-cat.png" loading="lazy"></a></div>
-
-    <div class="gallery">
-        <a href="inne/DSC_0138.jpg" download>
-        <img src="inne/DSC_0138.jpg" loading="lazy"></a></div>
-
-        <div class="gallery">
-            <a href="inne/zadanie1gimp.png" download>
-            <img src="inne/zadanie1gimp.png" loading="lazy"></a></div>
-
+<div class="php-warning"><p>UWAGA! Pliki PHP nie będą tu działać w 100% poprawnie z powodu braku backendu na gh-pages</p></div>
 
 </body>
 </html>
