--- a/innestrony.html
+++ b/innestrony.html
@@ -16,6 +16,7 @@
 <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
 <a href="starszaki.html">STARSZAKI</a>
 <a href="python.html">PLIKI PYTHON</a>
+<a href="php.html">PLIKI PHP</a>
 <a href="innestrony.html">INNE STRONY</a>
 <a href="zdjecia.html">ZDJĘCIA</a>
 <a href="inne.html">INNE PLIKI</a>
