--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
 
  <div class="gallery">
+    <a target="_blank" href="sp/230912/index.html">
+    <img src="img/230912.webp" loading="lazy"></a>
+    <p>12.09.23 - Pętle while i coś tam</p>
+    <p><a href="zip/230912.zip" download>Pobierz</a></p></div>  
+ 
+ <div class="gallery">
     <a target="_blank" href="sp/230907/index.html">
     <img src="img/230907.webp" loading="lazy"></a>
     <p>07.09.23 - Strona responsywna</p>
