--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
 <h3> &#169; rotkiW285</h3>
 </div>
 
-
-
-
-
-
-
-
-
-
+ <div class="gallery">
+    <a target="_blank" href="sp/230912-wiai/index.html">
+    <img src="img/230912-wiai.webp" loading="lazy"></a>
+    <p>12.09.23 - Strona responsywna (na ocenę)</p>
+    <p><a href="zip/230912-wiai.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230912/index.html">
