--- a/index.html
+++ b/index.html
@@ -26,27 +26,33 @@
 </div>
 
  <div class="gallery">
+    <a target="_blank" href="sp/230915-psi/index.html">
+    <img src="img/230915-psi.webp" loading="lazy"></a>
+    <p>15.09.23 - [PSI] podstawy HTML replay</p>
+    <p><a href="zip/230915-psi.zip" download>Pobierz</a></p></div>  
+
+ <div class="gallery">
     <a target="_blank" href="sp/230912-wiai/index.html">
     <img src="img/230912-wiai.webp" loading="lazy"></a>
-    <p>12.09.23 - Strona responsywna (na ocenę)</p>
+    <p>12.09.23 - [WIAI] Strona responsywna</p>
     <p><a href="zip/230912-wiai.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230912/index.html">
     <img src="img/230912.webp" loading="lazy"></a>
-    <p>12.09.23 - Pętle while i coś tam</p>
+    <p>12.09.23 - [PAI] Pętle while i coś tam</p>
     <p><a href="zip/230912.zip" download>Pobierz</a></p></div>  
  
  <div class="gallery">
     <a target="_blank" href="sp/230907/index.html">
     <img src="img/230907.webp" loading="lazy"></a>
-    <p>07.09.23 - Strona responsywna</p>
+    <p>07.09.23 - [WIAI] Strona responsywna</p>
     <p><a href="zip/230907.zip" download>Pobierz</a></p></div>   
 
  <div class="gallery">
     <a target="_blank" href="sp/230905/index.html">
     <img src="img/230905.webp" loading="lazy"></a>
-    <p>05.09.23 - Pierwsze kroki w JS</p>
+    <p>05.09.23 - [PAI] Pierwsze kroki w JS</p>
     <p><a href="zip/230905.zip" download>Pobierz</a></p></div>    
 
 </body>
