--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 <h3> &#169; rotkiW285</h3>
 </div>
 
+
+ <div class="gallery">
+    <a target="_blank" href="sp/230926-pai/index.html">
+    <img src="img/230926-pai.webp" loading="lazy"></a>
+    <p>26.09.23 - [PAI] Piramidy i inne gówno</p>
+    <p><a href="zip/230915-psi.zip" download>Pobierz</a></p></div>  
+
+ <div class="gallery">
+    <a target="_blank" href="sp/230919-pai/index.html">
+    <img src="img/230919-pai.webp" loading="lazy"></a>
+    <p>19.09.23 - [PAI] Sumy liczb i silnie</p>
+    <p><a href="zip/230915-psi.zip" download>Pobierz</a></p></div>  
+
  <div class="gallery">
     <a target="_blank" href="sp/230915-psi/index.html">
     <img src="img/230915-psi.webp" loading="lazy"></a>
