--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <h3> &#169; rotkiW285</h3>
 </div>
 
+ <div class="gallery">
+    <a target="_blank" href="sp/230929/index.html">
+    <img src="img/230929.webp" loading="lazy"></a>
+    <p>29.09.23 - [PSI] Grid zadanie powtórkowe</p>
+    <p><a href="zip/230929.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230926-pai/index.html">
