--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <a target="_blank" href="sp/231010/index.html">
     <img src="img/231010.webp" loading="lazy"></a>
     <p>10.10.23 - [PAI] 3 sposoby sortowania</p>
-    <p><a href="zip/x.zip" download>Pobierz</a></p></div> 
+    <p><a href="zip/231010.zip" download>Pobierz</a></p></div> 
 
 
  <div class="gallery">
     <a target="_blank" href="sp/231003/index.html">
     <img src="img/231003.webp" loading="lazy"></a>
     <p>03.10.23 - [PSI] Grid zadanie powtórkowe</p>
-    <p><a href="zip/x.zip" download>Pobierz</a></p></div>  
+    <p><a href="zip/231003.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230929/index.html">
     <img src="img/230929.webp" loading="lazy"></a>
-    <p>29.09.23 - [PSI] Grid zadanie powtórkowe</p>
+    <p>29.09.23 - [PSI] Flex zadanie powtórkowe</p>
     <p><a href="zip/230929.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
