--- a/php.html
+++ b/php.html
@@ -13,17 +13,18 @@
 </head>
 <body>
     <div class="nav">
-<a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
-<a href="starszaki.html">STARSZAKI</a>
-<a href="python.html">PLIKI PYTHON</a>
-<a href="php.html">PLIKI PHP</a>
-<a href="innestrony.html">INNE STRONY</a>
-<a href="zdjecia.html">ZDJĘCIA</a>
-<a href="inne.html">INNE PLIKI</a>
-<a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
-<h3> &#169; rotkiW285</h3>
+    <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
+    <a href="starszaki.html">STARSZAKI</a>
+    <a href="innestrony.html">INNE STRONY</a>
+    <a href="python.html">PYTHON</a>
+    <a href="php.html">PHP</a>
+    <a href="zdjecia.html">ZDJĘCIA</a>
+    <a href="inne.html">INNE PLIKI</a>
+    <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
+    <a href="text.txt" target="_blank">INFO</a>
+    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
-<div class="php-warning"><p>UWAGA! Pliki PHP nie będą tu działać w 100% poprawnie z powodu braku backendu na gh-pages</p></div>
+<div class="warning"><p>UWAGA! Pliki PHP nie będą tu działać w 100% poprawnie z powodu braku backendu na gh-pages</p></div>
 
 </body>
 </html>
