--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  <div class="gallery">
     <a target="_blank" href="sp/231003/index.html">
     <img src="img/231003.webp" loading="lazy"></a>
-    <p>03.10.23 - [PSI] Grid zadanie powtórkowe</p>
+    <p>03.10.23 - [PAI] Grid zadanie powtórkowe</p>
     <p><a href="zip/231003.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
