--- a/sp/231003/index.html
+++ b/sp/231003/index.html
@@ -8,7 +8,7 @@
         body{background-color: cornflowerblue; font-size: 60px;}</style>
 </head>
 <body>
-    <p>PSI 03.10.2023 - TABLICE, </p>
+    <p>PAI 03.10.2023 - TABLICE, </p>
     <a href="zad1.html">Zad1</a>
     <a href="zad2.html">Zad2</a>
     <a href="zad3.html">Zad3</a>
