--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <!-- <div class="warning"><p>UWAGA!</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/231017/index.html">
+    <img src="img/231017.webp" loading="lazy"></a>
+    <p>17.10.23 - [PAI] Sprawdzian</p>
+    <p><a href="zip/231017.zip" download>Pobierz</a></p></div> 
+   
+ <div class="gallery">
     <a target="_blank" href="sp/231010/index.html">
     <img src="img/231010.webp" loading="lazy"></a>
     <p>10.10.23 - [PAI] 3 sposoby sortowania</p>
