adding bold text to nav depending on what page the user is on

--- a/inne.html
+++ b/inne.html
@@ -19,7 +19,7 @@
     <a href="python.html">PYTHON</a>
     <a href="php.html">PHP</a>
     <a href="zdjecia.html">ZDJĘCIA</a>
-    <a href="inne.html">INNE PLIKI</a>
+    <b><a href="inne.html">INNE PLIKI</a></b>
     <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
     <a href="text.txt" target="_blank">INFO</a>
     <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
