--- a/python.html
+++ b/python.html
@@ -16,7 +16,7 @@
     <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
     <a href="starszaki.html">STARSZAKI</a>
     <a href="innestrony.html">INNE STRONY</a>
-    <a href="python.html">PYTHON</a>
+    <b><a href="python.html">PYTHON</a></b>
     <a href="php.html">PHP</a>
     <a href="zdjecia.html">ZDJĘCIA</a>
     <a href="inne.html">INNE PLIKI</a>
