--- a/starszaki.html
+++ b/starszaki.html
@@ -14,7 +14,7 @@
 <body>
     <div class="nav">
     <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
-    <a href="starszaki.html">STARSZAKI</a>
+    <b><a href="starszaki.html">STARSZAKI</a></b>
     <a href="innestrony.html">INNE STRONY</a>
     <a href="python.html">PYTHON</a>
     <a href="php.html">PHP</a>
