--- a/innestrony.html
+++ b/innestrony.html
@@ -15,7 +15,7 @@
     <div class="nav">
 <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
 <a href="starszaki.html">STARSZAKI</a>
-<a href="innestrony.html">INNE STRONY</a>
+<b><a href="innestrony.html">INNE STRONY</a></b>
 <a href="python.html">PYTHON</a>
 <a href="php.html">PHP</a>
 <a href="zdjecia.html">ZDJĘCIA</a>
