--- a/zdjecia.html
+++ b/zdjecia.html
@@ -18,7 +18,7 @@
     <a href="innestrony.html">INNE STRONY</a>
     <a href="python.html">PYTHON</a>
     <a href="php.html">PHP</a>
-    <a href="zdjecia.html">ZDJĘCIA</a>
+    <b><a href="zdjecia.html">ZDJĘCIA</a></b>
     <a href="inne.html">INNE PLIKI</a>
     <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
     <a href="text.txt" target="_blank">INFO</a>
