Fixing the dot display in inne.html

--- a/inne.html
+++ b/inne.html
@@ -39,7 +39,7 @@
     <a target="_blank" href="inne/ostatnie slowa.txt">
     <img src="img/ostatnie-slowa.webp" loading="lazy"></a>
     <p>Ostatnie słowa</p>
-    <p>.</p></div>
+    <p style="color: #3b3b3b;">.</p></div>
 
     <div class="gallery">
     <img src="img/inf02-23.webp" loading="lazy">
