--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     <p>10.10.23 - [PAI] 3 sposoby sortowania</p>
     <p><a href="zip/231010.zip" download>Pobierz</a></p></div> 
 
+ <div class="gallery">
+    <a target="_blank" href="sp/231006/index.html">
+    <img src="img/231006.webp" loading="lazy"></a>
+    <p>06.10.23 - [PSI] Strona GRID na ocenę</p>
+    <p><a href="zip/231006.zip" download>Pobierz</a></p></div> 
+
 
  <div class="gallery">
     <a target="_blank" href="sp/231003/index.html">
