--- a/php.html
+++ b/php.html
@@ -26,5 +26,10 @@
 </div>
 <div class="warning"><p>UWAGA! Pliki PHP nie będą tu działać w 100% poprawnie z powodu braku backendu na gh-pages</p></div>
 
+<div class="gallery">
+    <a href="inne/Normalizacja baz danych.pdf" target="_blank"><img src="img/pdf-cieslik.webp" loading="lazy"></a>
+    <p>PDF SBD 271023</p>
+    <p>‎</p></div>
+
 </body>
 </html>
