--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 <!-- <div class="warning"><p>UWAGA!</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/231107/index.html">
+    <img src="img/231107.webp" loading="lazy"></a>
+    <p>07.11.23 - [PAI] 11 Zadań z funkcji</p>
+    <p><a href="zip/231107.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
+    <a target="_blank" href="sp/231024/index.html">
+    <img src="img/231024.webp" loading="lazy"></a>
+    <p>24.10.23 - [PAI] Funkcje</p>
+    <p><a href="zip/231024.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
     <a target="_blank" href="sp/231017/index.html">
     <img src="img/231017.webp" loading="lazy"></a>
     <p>17.10.23 - [PAI] Sprawdzian</p>
@@ -48,13 +60,13 @@
  <div class="gallery">
     <a target="_blank" href="sp/231003/index.html">
     <img src="img/231003.webp" loading="lazy"></a>
-    <p>03.10.23 - [PAI] Grid zadanie powtórkowe</p>
+    <p>03.10.23 - [PAI] Tablice</p>
     <p><a href="zip/231003.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230929/index.html">
     <img src="img/230929.webp" loading="lazy"></a>
-    <p>29.09.23 - [PSI] Flex zadanie powtórkowe</p>
+    <p>29.09.23 - [PSI] Flex na ocenę</p>
     <p><a href="zip/230929.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
