pay no attention to the man behind the curtain

--- a/sp/231107/index.html
+++ b/sp/231107/index.html
@@ -18,6 +18,6 @@
     <a href="zad9.html">SIŁA</a><br>
     <a href="zad10.html">TRÓJKĄT</a><br>
     <a href="zad11.html">SZYFR</a><br><br>
-    działa poprawnie: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+    działa poprawnie: 1, 2 oraz 4 które wygląda jakby miało działać a tak nie jest
 </body>
 </html>
