--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  <div class="gallery">
     <a target="_blank" href="sp/231006/index.html">
     <img src="img/231006.webp" loading="lazy"></a>
-    <p>06.10.23 - [PSI] Strona GRID na ocenę</p>
+    <p>06.10.23 - [PSI] GRID na ocenę</p>
     <p><a href="zip/231006.zip" download>Pobierz</a></p></div> 
 
 
