--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <!-- <div class="warning"><p>UWAGA!</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/231110/index.html">
+    <img src="img/231110.webp" loading="lazy"></a>
+    <p>10.11.23 - [PSI] Reklamowa animacja CSS</p>
+    <p><a href="zip/231110.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
     <a target="_blank" href="sp/231107/index.html">
     <img src="img/231107.webp" loading="lazy"></a>
     <p>07.11.23 - [PAI] 11 Zadań z funkcji</p>
