Expiring domain warning

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <a href="text.txt" target="_blank">INFO</a>
    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
-<!-- <div class="warning"><p>UWAGA!</p></div> -->
+<div class="warning" ><p>UWAGA!<br> Z dniem 28 listopada dotychczasowa domena (r285.xyz) wygasa i nie mam w planach jej przedłużenia. <br>W związku z tym od 29 listopada strona będzie działać pod innym adresem.<br>Bliżej tego dnia podany zostanie nowy adres pod która strona będzie działać przez najbliższy rok.</p></div>
 
  <div class="gallery">
     <a target="_blank" href="sp/231110/index.html">
