--- a/inne.html
+++ b/inne.html
@@ -17,7 +17,7 @@
     <a href="starszaki.html">STARSZAKI</a>
     <a href="innestrony.html">INNE STRONY</a>
     <a href="python.html">PYTHON</a>
-    <a href="php.html">PHP</a>
+    <a href="php.html">SBD & PBD</a>
     <a href="zdjecia.html">ZDJĘCIA</a>
     <b><a href="inne.html">INNE PLIKI</a></b>
     <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
