--- a/php.html
+++ b/php.html
@@ -17,7 +17,7 @@
     <a href="starszaki.html">STARSZAKI</a>
     <a href="innestrony.html">INNE STRONY</a>
     <a href="python.html">PYTHON</a>
-    <b><a href="php.html">PHP</a></b>
+    <b><a href="php.html">SBD & PBD</a></b>
     <a href="zdjecia.html">ZDJĘCIA</a>
     <a href="inne.html">INNE PLIKI</a>
     <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
@@ -27,9 +27,40 @@
 <div class="warning"><p>UWAGA! Pliki PHP nie będą tu działać w 100% poprawnie z powodu braku backendu na gh-pages</p></div>
 
 <div class="gallery">
-    <a href="inne/Normalizacja baz danych.pdf" target="_blank"><img src="img/pdf-cieslik.webp" loading="lazy"></a>
-    <p>PDF SBD 271023</p>
-    <p>‎</p></div>
+    <a href="php/pdfy/Algebra relacji.pdf" target="_blank"><p>[PDF] Algebra relacji</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Diagramy ERD.pdf" target="_blank"><p>[PDF] Diagramy ERD</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Klucz relacji.pdf" target="_blank"><p>[PDF] Klucz relacji</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Normalizacja baz danych - przykłady.pdf" target="_blank"><p>[PDF] Normalizacja baz danych - przykłady</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Normalizacja baz danych.pdf" target="_blank"><p>[PDF] Normalizacja baz danych</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Postulaty Codda.pdf" target="_blank"><p>[PDF] Postulaty Codda</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Projektowanie bazy danych.pdf" target="_blank"><p>[PDF] Projektowanie bazy danych</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Relacje.pdf" target="_blank"><p>[PDF] Relacje</p></a>
+    <p>[SBD]</p></div>
+
+<div class="gallery">
+    <a href="php/pdfy/Tabele jako relacje.pdf" target="_blank"><p>[PDF] Tabele jako relacje</p></a>
+    <p>[SBD]</p></div>
 
 </body>
 </html>
