--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <div class="warning" ><p>UWAGA!<br> Z dniem 28 listopada dotychczasowa domena (r285.xyz) wygasa i nie mam w planach jej przedłużenia. <br>W związku z tym od 29 listopada strona będzie działać pod innym adresem.<br>Bliżej tego dnia podany zostanie nowy adres pod która strona będzie działać przez najbliższy rok.</p></div>
 
  <div class="gallery">
+    <a target="_blank" href="sp/231124-psi/index.html">
+    <img src="img/231124-psi.webp" loading="lazy"></a>
+    <p>24.11.23 - [PSI] JS Kalkulator i pole kwadratu</p>
+    <p><a href="zip/231110.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
     <a target="_blank" href="sp/231110/index.html">
     <img src="img/231110.webp" loading="lazy"></a>
     <p>10.11.23 - [PSI] Reklamowa animacja CSS</p>
