--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <a href="text.txt" target="_blank">INFO</a>
    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
-<div class="warning" ><p>UWAGA!<br> Od jutra strona bedzie dzialac pod adresem sp.285.works</p></div>
+<!-- <div class="warning" ><p>UWAGA!<br> Od jutra strona bedzie dzialac pod adresem sp.285.works</p></div> -->
 
  <div class="gallery">
     <a target="_blank" href="sp/231124-psi/index.html">
