--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
    <a href="text.txt" target="_blank">INFO</a>
    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
-<!-- <div class="warning" ><p>UWAGA!<br> Od jutra strona bedzie dzialac pod adresem sp.285.works</p></div> -->
+<!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
+
+ <div class="gallery">
+    <a target="_blank" href="sp/231128/index.html">
+    <img src="img/231128.webp" loading="lazy"></a>
+    <p>28.11.23 - [PAI] Ćwiczenia stringów</p>
+    <p><a href="zip/231128.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231124-psi/index.html">
     <img src="img/231124-psi.webp" loading="lazy"></a>
     <p>24.11.23 - [PSI] JS Kalkulator i pole kwadratu</p>
-    <p><a href="zip/231110.zip" download>Pobierz</a></p></div> 
+    <p><a href="zip/231124.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231110/index.html">
