CIE01, CIE02, IS57

--- a/innestrony.html
+++ b/innestrony.html
@@ -284,6 +284,12 @@
     <p>FlappyBird</p>
     <p><a href="zip/FlappyBird.zip" download>Pobierz</a></p></div>
 
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is57/index.html">
+    <img src="img/is57.webp" loading="lazy"></a>
+    <p>FlappyBird</p>
+    <p><a href="zip/is57.zip" download>Pobierz</a></p></div>
+
 
 
 
