--- a/php.html
+++ b/php.html
@@ -27,40 +27,13 @@
 <div class="warning"><p>UWAGA! Pliki PHP nie będą tu działać w 100% poprawnie z powodu braku backendu na gh-pages</p></div>
 
 <div class="gallery">
-    <a href="php/pdfy/Algebra relacji.pdf" target="_blank"><p>[PDF] Algebra relacji</p></a>
-    <p>[SBD]</p></div>
+    <img src="img/cie01.webp" loading="lazy">
+    <p>28.11.23 - PDFy do nauki do spr</p>
+    <p><a href="zip/cie01.zip" download>Pobierz</a></p></div> 
 
 <div class="gallery">
-    <a href="php/pdfy/Diagramy ERD.pdf" target="_blank"><p>[PDF] Diagramy ERD</p></a>
-    <p>[SBD]</p></div>
-
-<div class="gallery">
-    <a href="php/pdfy/Klucz relacji.pdf" target="_blank"><p>[PDF] Klucz relacji</p></a>
-    <p>[SBD]</p></div>
-
-<div class="gallery">
-    <a href="php/pdfy/Normalizacja baz danych - przykłady.pdf" target="_blank"><p>[PDF] Normalizacja baz danych - przykłady</p></a>
-    <p>[SBD]</p></div>
-
-<div class="gallery">
-    <a href="php/pdfy/Normalizacja baz danych.pdf" target="_blank"><p>[PDF] Normalizacja baz danych</p></a>
-    <p>[SBD]</p></div>
-
-<div class="gallery">
-    <a href="php/pdfy/Postulaty Codda.pdf" target="_blank"><p>[PDF] Postulaty Codda</p></a>
-    <p>[SBD]</p></div>
-
-<div class="gallery">
-    <a href="php/pdfy/Projektowanie bazy danych.pdf" target="_blank"><p>[PDF] Projektowanie bazy danych</p></a>
-    <p>[SBD]</p></div>
-
-<div class="gallery">
-    <a href="php/pdfy/Relacje.pdf" target="_blank"><p>[PDF] Relacje</p></a>
-    <p>[SBD]</p></div>
-
-<div class="gallery">
-    <a href="php/pdfy/Tabele jako relacje.pdf" target="_blank"><p>[PDF] Tabele jako relacje</p></a>
-    <p>[SBD]</p></div>
-
+    <img src="img/cie02.webp" loading="lazy">
+    <p>23.11.23 - Zadanie "Sklep komputerowy"</p>
+    <p><a href="zip/cie02.zip" download>Pobierz</a></p></div> 
 </body>
 </html>
