--- a/php.html
+++ b/php.html
@@ -28,17 +28,22 @@
 
 <div class="gallery">
     <img src="img/cie01.webp" loading="lazy">
-    <p>28.11.23 - PDFy do nauki do spr</p>
+    <p>27.11.23 - PDFy do nauki do spr</p>
     <p><a href="zip/cie01.zip" download>Pobierz</a></p></div> 
 
 <div class="gallery">
     <img src="img/cie02.webp" loading="lazy">
-    <p>23.11.23 - Zadanie "Sklep komputerowy"</p>
+    <p>Zadanie "Sklep komputerowy"</p>
     <p><a href="zip/cie02.zip" download>Pobierz</a></p></div> 
 
 <div class="gallery">
     <img src="img/cie03.webp" loading="lazy">
-    <p>21.11.23 - Zadanie access</p>
+    <p>Baza danych klienci</p>
     <p><a href="zip/cie03.zip" download>Pobierz</a></p></div> 
+
+<div class="gallery">
+    <img src="img/cie04.webp" loading="lazy">
+    <p>24.11.23 - Sprawdzian -> uczniowie</p>
+    <p><a href="zip/cie04.zip" download>Pobierz</a></p></div> 
 </body>
 </html>
