just checking if git is working properly...

--- a/inne.html
+++ b/inne.html
@@ -27,19 +27,19 @@
 
     <div class="gallery">
     <img src="img/m_obliczenia_pusty.webp" loading="lazy">
-    <p>m_obliczenia_pusty.xls (1szy plik exel)</p>
-    <p><a href="inne/m_obliczenia_pusty.xls" download>Pobierz</a></p></div>
+    <p>5 plików exel (informatyka)</p>
+    <p><a href="zip/exele.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
     <img src="img/egzaminy2023.webp" loading="lazy">
-    <p>Egzaminy 2023 (Zalecenia)</p>
+    <p>Egzaminy styczeń 2023 (Zalecenia)</p>
     <p><a href="zip/egzaminy2023.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
     <a target="_blank" href="inne/ostatnie slowa.txt">
     <img src="img/ostatnie-slowa.webp" loading="lazy"></a>
     <p>Ostatnie słowa</p>
-    <p style="color: #3b3b3b;">.</p></div>
+    <p>‎</p></div>
 
     <div class="gallery">
     <img src="img/inf02-23.webp" loading="lazy">
