--- a/innestrony.html
+++ b/innestrony.html
@@ -279,15 +279,15 @@
     <p><a href="zip/is01.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
-    <a target="_blank" href="innestrony/FlappyBird2.0/index.html">
-    <img src="img/FlappyBird.webp" loading="lazy"></a>
+    <a target="_blank" href="innestrony/is02/index.html">
+    <img src="img/is02.webp" loading="lazy"></a>
     <p>FlappyBird</p>
-    <p><a href="zip/FlappyBird.zip" download>Pobierz</a></p></div>
+    <p><a href="zip/is02.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
     <a target="_blank" href="innestrony/is57/index.html">
     <img src="img/is57.webp" loading="lazy"></a>
-    <p>FlappyBird</p>
+    <p>Ładny licznik czasu JS</p>
     <p><a href="zip/is57.zip" download>Pobierz</a></p></div>
 
 
