--- a/sp/231124-psi/index.html
+++ b/sp/231124-psi/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="kalkulator.html">2ga rzecz - Kalkulator</a>
+    <a href="zoptymalizowany.html">2ga rzecz - Kalkulator</a>
     <h1>Pole prostokąta</h1>
     Podaj wymiary boku a: <input type="text" id="a"><br>
     Podaj wymiary boku b: <input type="text" id="b"><br>
