--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/231201/index.html">
+    <img src="img/231201.webp" loading="lazy"></a>
+    <p>01.12.23 - [PAI] - Kalkulator BMI</p>
+    <p><a href="zip/231201.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
     <a target="_blank" href="sp/231128/index.html">
     <img src="img/231128.webp" loading="lazy"></a>
     <p>28.11.23 - [PAI] Ćwiczenia stringów</p>
