--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="nav">
-   <a href="https://r285.xyz" target="_blank"><p class="text">𝕊CHOOL PROJECTS</p></a>
+   <a href="https://285.works" target="_blank"><p class="text">𝕊CHOOL PROJECTS</p></a>
    <a href="starszaki.html">STARSZAKI</a>
    <a href="innestrony.html">INNE STRONY</a>
    <a href="python.html">PYTHON</a>
@@ -27,9 +27,14 @@
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/231205/index.html">
+    <img src="img/231205.webp" loading="lazy"></a>
+    <p>05.12.23 - [PAI] - Daty i godziny w JS</p>
+    <p><a href="zip/231205.zip" download>Pobierz</a></p></div> 
+ <div class="gallery">
     <a target="_blank" href="sp/231201/index.html">
     <img src="img/231201.webp" loading="lazy"></a>
-    <p>01.12.23 - [PAI] - Kalkulator BMI</p>
+    <p>01.12.23 - [PSI] - Kalkulator BMI</p>
     <p><a href="zip/231201.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
