--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <img src="img/231205.webp" loading="lazy"></a>
     <p>05.12.23 - [PAI] - Daty i godziny w JS</p>
     <p><a href="zip/231205.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
+    <img src="img/231205-wiai.webp" loading="lazy">
+    <p>05.12.23 - [WIAI] - 3 efekty GIMP</p>
+    <p><a href="zip/231205-wiai.zip" download>Pobierz</a></p></div> 
+
  <div class="gallery">
     <a target="_blank" href="sp/231201/index.html">
     <img src="img/231201.webp" loading="lazy"></a>
