--- a/sp/231124-psi/index.html
+++ b/sp/231124-psi/index.html
@@ -7,8 +7,8 @@
     <title>24.11.23</title>
 </head>
 <body>
-    <a href="kalkulator.html">2ga rzecz - Kalkulator</a>
-    <a href="zoptymalizowany.html">2ga rzecz - Kalkulator</a>
+    <a href="kalkulator.html">2ga rzecz - Kalkulator</a><br>
+    <a href="zoptymalizowany.html">Zoptymalizowany Kalkulator</a>
     <h1>Pole prostokąta</h1>
     Podaj wymiary boku a: <input type="text" id="a"><br>
     Podaj wymiary boku b: <input type="text" id="b"><br>
