change information about php files

--- a/php.html
+++ b/php.html
@@ -24,7 +24,7 @@
     <a href="text.txt" target="_blank">INFO</a>
     <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
-<div class="warning"><p>UWAGA! Pliki PHP nie będą tu działać w 100% poprawnie z powodu braku backendu na gh-pages</p></div>
+<div class="warning"><p>UWAGA! Funkcje PHP nie będą tu działać z powodu braku backendu na gh-pages</p></div>
 
 <div class="gallery">
     <img src="img/cie01.webp" loading="lazy">
