--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/240102/index.html">
+    <img src="img/240102.webp" loading="lazy"></a>
+    <p>02.01.24 - [PAI] - Klasy, konstruktory</p>
+    <p><a href="zip/240102.zip" download>Pobierz</a></p></div> 
+ <div class="gallery">
     <a target="_blank" href="sp/231205/index.html">
     <img src="img/231205.webp" loading="lazy"></a>
     <p>05.12.23 - [PAI] - Daty i godziny w JS</p>
