--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <img src="img/240102.webp" loading="lazy"></a>
     <p>02.01.24 - [PAI] - Klasy, konstruktory</p>
     <p><a href="zip/240102.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
+    <a target="_blank" href="sp/231212/index.html">
+    <img src="img/231212.webp" loading="lazy"></a>
+    <p>12.12.23 - [PAI] - Odliczanie do dat</p>
+    <p><a href="zip/231212.zip" download>Pobierz</a></p></div> 
+
  <div class="gallery">
     <a target="_blank" href="sp/231205/index.html">
     <img src="img/231205.webp" loading="lazy"></a>
