E-NOTEBOOK link in php.html

--- a/php.html
+++ b/php.html
@@ -27,6 +27,11 @@
 <div class="warning"><p>UWAGA! Funkcje PHP nie będą tu działać z powodu braku backendu na gh-pages</p></div>
 
 <div class="gallery">
+    <img src="img/cie00.webp" loading="lazy">
+    <p>E-ZESZYT</p>
+    <p><a href="https://docs.google.com/document/d/1wmfDnKYrY6Kq8SfuyD4WRn_7wZglFRAQYvtqOQOnuKw/edit?usp=sharing" target="_blank">Zobacz</a></p></div> 
+
+<div class="gallery">
     <img src="img/cie01.webp" loading="lazy">
     <p>17.11.23 - PDFy do nauki do spr</p>
     <p><a href="zip/cie01.zip" download>Pobierz</a></p></div> 
