--- a/php.html
+++ b/php.html
@@ -50,5 +50,10 @@
     <img src="img/cie04.webp" loading="lazy">
     <p>24.11.23 - Sprawdzian -> uczniowie</p>
     <p><a href="zip/cie04.zip" download>Pobierz</a></p></div> 
+
+<div class="gallery">
+    <img src="img/cie05.webp" loading="lazy">
+    <p>02.01.24 - PDF do spr 050124</p>
+    <p><a href="zip/cie05.zip" download>Pobierz</a></p></div> 
 </body>
 </html>
