--- a/sp/240102/index.html
+++ b/sp/240102/index.html
@@ -9,7 +9,7 @@
     <a href="jeden.html">1</a><br>
     <a href="dwa.html">2</a><br>
     <a href="trzy.html">3</a><br>
-    <a href="cztery.html">4</a>
+    <a href="cztery.html">4</a><br>
     <a href="piec.html">5 (16.01.24)</a>
 </body>
 </html>
