--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/240123/index.html">
+    <img src="img/240123.webp" loading="lazy"></a>
+    <p>23.01.24 - [PAI] - Klasy, konstruktory c.d.</p>
+    <p><a href="zip/240123.zip" download>Pobierz</a></p></div> 
+
+ <!-- <div class="gallery">
+    <a target="_blank" href="sp/240122/index.html">
+    <img src="img/240122.webp" loading="lazy"></a>
+    <p>22.01.24 - [PAI] - Sprawdzian</p>
+    <p><a href="zip/240122.zip" download>Pobierz</a></p></div>  -->
+
+ <div class="gallery">
     <a target="_blank" href="sp/240102/index.html">
     <img src="img/240102.webp" loading="lazy"></a>
     <p>02.01.24 - [PAI] - Klasy, konstruktory</p>
