--- a/sp/240123/index.html
+++ b/sp/240123/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KRK [Imie Nazwisko Klasa]</title>
+    <title>23.01.24</title>
+    <style>
+        p{
+            text-align: center;
+            font-size: 30pt;
+            padding: 20px;
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-<script>
-class Robot {constructor(imie, symbol, producent, ilosc_operacji) {
-    this.imie = imie
-    this.symbol = symbol
-    this.producent = producent
-    this.ilosc_operacji = ilosc_operacji
-    }
-}
-let robot = new Robot("Androidos", "SCX-2137", " Januszex Sp.z.o.o.", "56876")
-document.write("Jestem ", robot.imie, "<br> Mój symbol fabryczny to ", robot.symbol, "<br>Wyprodukował mnie ", robot.producent, "<br>Wykonuję ", robot.ilosc_operacji, " operacji na minutę.")
-</script>
+<p><a href="1szy.html">1szy</a></p>
+<p><a href="2gi.html">2gi</a></p>
+<p><a href="3ci.html">3ci</a></p>
 </body>
 </html>
