Adding a blank div to highlight the e-notebook

--- a/php.html
+++ b/php.html
@@ -30,6 +30,7 @@
     <img src="img/cie00.webp" loading="lazy">
     <p>E-ZESZYT</p>
     <p><a href="https://docs.google.com/document/d/1wmfDnKYrY6Kq8SfuyD4WRn_7wZglFRAQYvtqOQOnuKw/edit?usp=sharing" target="_blank">Zobacz</a></p></div> 
+<div class="gallery"></div>
 
 <div class="gallery">
     <img src="img/cie01.webp" loading="lazy">
