--- a/innestrony.html
+++ b/innestrony.html
@@ -290,6 +290,12 @@
     <p>Ładny licznik czasu JS</p>
     <p><a href="zip/is57.zip" download>Pobierz</a></p></div>
 
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is58/index.html">
+    <img src="img/is58.webp" loading="lazy"></a>
+    <p>Kriper</p>
+    <p><a href="zip/is58.zip" download>Pobierz</a></p></div>
+
 
 
 
