is59 & fix typo in is58

--- a/innestrony.html
+++ b/innestrony.html
@@ -291,10 +291,16 @@
     <p><a href="zip/is57.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
-    <a target="_blank" href="innestrony/is58/index.html">
+    <a target="_blank" href="innestrony/is58/creeper.html">
     <img src="img/is58.webp" loading="lazy"></a>
     <p>Kriper</p>
     <p><a href="zip/is58.zip" download>Pobierz</a></p></div>
+
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is59/index.html">
+    <img src="img/is59.webp" loading="lazy"></a>
+    <p>Animacja perełka</p>
+    <p><a href="zip/is59.zip" download>Pobierz</a></p></div>
 
 
 
