edit tittle of cie05

--- a/php.html
+++ b/php.html
@@ -54,7 +54,7 @@
 
 <div class="gallery">
     <img src="img/cie05.webp" loading="lazy">
-    <p>02.01.24 - PDF do spr 050124</p>
+    <p>02.01.24 - PDF do spr 050124 (Typy danych)</p>
     <p><a href="zip/cie05.zip" download>Pobierz</a></p></div> 
 </body>
 </html>
