--- a/php.html
+++ b/php.html
@@ -45,16 +45,16 @@
 <div class="gallery">
     <img src="img/cie03.webp" loading="lazy">
     <p>Baza danych klienci</p>
-    <p><a href="zip/cie03.zip" download>Pobierz</a></p></div> 
+    <p><a href="files/211123.accdb" download>Pobierz</a></p></div> 
 
 <div class="gallery">
     <img src="img/cie04.webp" loading="lazy">
     <p>24.11.23 - Sprawdzian -> uczniowie</p>
-    <p><a href="zip/cie04.zip" download>Pobierz</a></p></div> 
+    <p><a href="/files/spr241123.accdb" download>Pobierz</a></p></div> 
 
 <div class="gallery">
     <img src="img/cie05.webp" loading="lazy">
     <p>02.01.24 - PDF do spr 050124 (Typy danych)</p>
-    <p><a href="zip/cie05.zip" download>Pobierz</a></p></div> 
+    <p><a href="files/Typy-danych.pdf" target="_blank">Zobacz</a></p></div> 
 </body>
 </html>
