--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
  <div class="gallery">
+    <a target="_blank" href="sp/240126/index.html">
+    <img src="img/240126.webp" loading="lazy"></a>
+    <p>26.01.24 - [PSI] - Bawiladnia na ocenę</p>
+    <p><a href="zip/240126.zip" download>Pobierz</a></p></div> 
+
+ <div class="gallery">
     <a target="_blank" href="sp/240123/index.html">
     <img src="img/240123.webp" loading="lazy"></a>
     <p>23.01.24 - [PAI] - Klasy, konstruktory c.d.</p>
