--- a/sp/240126/galeria.html
+++ b/sp/240126/galeria.html
@@ -32,9 +32,9 @@
     <div class="mainer">
         <div class="galeria">
 <div class="imgg"><img src="https://sp.285.works/innestrony/is53/uro.jpg"></div>
-<div class="imgg"><img src="https://lh3.googleusercontent.com/proxy/6i-wxRX1YRbXLzUt5UMlPBWph5PKShUXY410PRDqpQXPlICw6BWSPM2TRMXI9dLeq9_dAPNFjFK1wKM6OL9q8uU6Xv5rxsblDboJwMb2_Ho"></div>
-<div class="imgg"><img src="https://lh3.googleusercontent.com/proxy/fWJlRkTviIjPyM_Ho8UBhmOacEHi99EkqXUYIwPSpjOZ-aVcHq7cb-8kiTNf-MttdsrMSfClJVI0bVyEOl_IgcQGWpLtizV3crQZ5n38pHY"></div>
-<div class="imgg"><img src="https://lh3.googleusercontent.com/proxy/vFxLGXqGUePMCKyLK40iuKgY5KlrMt8wNJXSo8QvRyk9-2m3mvi3qmJIN_o-lCpXrbDR2stCrp6OvPXDkkhAUfBjxzqlYcnwZq5Aodb2MoQH"></div>
+<div class="imgg"><img src="https://scontent-waw1-1.xx.fbcdn.net/v/t39.30808-6/327271259_1587114455066384_7896167823618519082_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=efb6e6&_nc_ohc=L3mVWv6zQJsAX_UIY6l&_nc_ht=scontent-waw1-1.xx&oh=00_AfAu7Glg1kzjikOtuhfw4BJjwYtPxCgBa_3InIRL5HdDZA&oe=65D2B170"></div>
+<div class="imgg"><img src="http://files.clickweb.home.pl/8f/f6/8ff668bd-884f-47e3-bb14-2adcf71a6827.jpg"></div>
+<div class="imgg"><img src="https://api-cmsly.overcloud.usermd.net/uploads/test/bawilandia1_1565695237728.JPG"></div>
         </div>
     </div>
     <div class="righter">
