--- a/sp/240220/index.html
+++ b/sp/240220/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KRK [Imie Nazwisko Klasa]</title>
+    <title>KRK NA TRUJE</title>
 </head>
 <body>
 <script>
