--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 </div>
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
+ <!-- <div class="gallery">
+    <a target="_blank" href="sp/240220/index.html">
+    <img src="img/240220.webp" loading="lazy"></a>
+    <p>20.02.24 - [PAI] - Sprawdzian Klasy i obiekty</p>
+    <p><a href="zip/240122.zip" download>Pobierz</a></p></div>  -->
+    <!-- PRZY PUBLIKACJI ZMIENIĆ NAZWE ZIPA  -->
+
  <div class="gallery">
     <a target="_blank" href="sp/240126/index.html">
     <img src="img/240126.webp" loading="lazy"></a>
@@ -37,12 +44,6 @@
     <img src="img/240123.webp" loading="lazy"></a>
     <p>23.01.24 - [PAI] - Klasy, konstruktory c.d.</p>
     <p><a href="zip/240123.zip" download>Pobierz</a></p></div> 
-
- <!-- <div class="gallery">
-    <a target="_blank" href="sp/240122/index.html">
-    <img src="img/240122.webp" loading="lazy"></a>
-    <p>22.01.24 - [PAI] - Sprawdzian</p>
-    <p><a href="zip/240122.zip" download>Pobierz</a></p></div>  -->
 
  <div class="gallery">
     <a target="_blank" href="sp/240102/index.html">
